--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>locoo | Home</title>
+  </head>
+  <body>
+    <div><a href="find.html"> find locals<a></div>
+    <div>what is this about<div>
+  </body>
+</html>
