added home line

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,7 @@
     <title>locoo | Home</title>
   </head>
   <body>
+	<div><a href="users"> add users </a></div>
     <div><a href="find.html"> find locals<a></div>
     <div>what is this about<div>
   </body>
