addng dynamic title

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,9 @@
+<% provide(:title, 'home') %>
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>locoo | Home</title>
-  </head>
   <body>
 	<div><a href="users"> add users </a></div>
     <div><a href="find.html"> find locals<a></div>
-    <div>what is this about<div>
+    <p>what is this about</p>
   </body>
 </html>
