--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div style="top: 50px" class="field">
     <%= f.label :username %><br />
     <%= f.text_field :username %>
   </div>
@@ -27,10 +27,6 @@
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
-  <!-- ><div class="field">
-    <%= f.label :id %><br />
-    <%= f.number_field :id %>
-  </div> -->
   <div class="actions">
     <%= f.submit %>
   </div>
