--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LocoApp | <%= yield(:title) %> </title>
+  <title> <%= default_title(yield(:title)) %> </title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<header class="navbar navbar-fixed-top">
+	      <div class="navbar-inner">
+	        <div class="container">
+	          <%= link_to "locoapp", '/', id: "logo" %>
+	          <nav>
+	            <ul class="nav pull-right">
+	              <li><%= link_to "about", 'about' %></li>
+	              <li><%= link_to "Sign in", '/users' %></li>
+	            </ul>
+	          </nav>
+	        </div>
+	      </div>
+	    </header>	    
+	<div class="container">
 
 <%= yield %>
 
