--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,16 @@
 	          <nav>
 	            <ul class="nav pull-right">
 	              <li><%= link_to "about", 'about' %></li>
-	              <li><%= link_to "Sign in", '/users' %></li>
+	              <li><%= link_to "sign up ", '/signup' %></li>
+				  <li><%= link_to "login", '/users' %></li>
 	            </ul>
 	          </nav>
 	        </div>
-	      </div>
+	      </div>	
 	    </header>	    
-	<div class="container">
-
-<%= yield %>
-
+		<div class="container">
+			<%= yield %>
+			<%= debug(params) if Rails.env.development? %>
+		</dib>	
 </body>
 </html>
