--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 	          <nav>
 	            <ul class="nav pull-right">
 	              <li><%= link_to "about", 'about' %></li>
-	              <li><%= link_to "sign up ", '/signup' %></li>
+	              <li><%= link_to "sign up ", '/users/new' %></li>
 				  <li><%= link_to "login", '/users' %></li>
 	            </ul>
 	          </nav>
