--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,10 @@
 <% provide(:title, 'sign up') %>
-<h1>Locoo Sign Up</h1>
-<p>please fill out the form below to sign up. </p>
+<div style="height:100px"> 
+
+</div>
+<h1>Sign Up</h1>
+<div>
 <%= render 'form' %>
 
 <%= link_to 'Back', users_path %>
+</div>
