--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, @user.username) %>
+<% provide(:title, @user.firstname + " " + @user.lastname) %>
 
 <p id="notice"><%= notice %></p>
 
