--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 	          <h2> <%= link_to "Lokolit", '/', id: "logo" %> </h2>
 	          <nav>
 	            <ul class="nav pull-right">
-	              <li><%= link_to "about", 'about' %></li>
+	              <li><%= link_to "about", '/about' %></li>
 				  <% if signed_in? %>
 				  <li> <%= link_to "Users", '#' %></li>
 				  <li id="fat-menu" class="dropdown">
@@ -35,8 +35,17 @@
 	          </nav>
 	        </div>
 	      </div>	
-	    </header>	    
+	    </header>
+        <div style="height: 100px;"></div>
+    
 		<div class="container">
+            <% flash.each do |key, value| %>
+            <% if "#{key}" == "error" %>
+                <%= content_tag(:div, value, style: "color: red") %>
+            <% else %>
+                <%= content_tag(:div, value, style: "color: green") %>
+            <% end %>
+            <% end %>
 			<%= yield %>
 			<%= debug(params) if Rails.env.development? %>
 		</dib>	
