--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,12 @@
-<h1>Listing users</h1>
 
-<table>
-  <tr>
-    <th>Email</th>
-    <th>Firstname</th>
-    <th>Lastname</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<%= provide(:title, 'All users') %>
+<h1>All users</h1>
 
-<% @users.each do |user| %>
-  <tr>
-    <td><%= user.email %></td>
-    <td><%= user.firstname %></td>
-    <td><%= user.lastname %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
+<%= will_paginate %>
+
+<table class="users">
+    <%= render @users %>
 </table>
 
-<br />
-
-<%= link_to 'New User', new_user_path %>
+<%= will_paginate %>
+</ul>
