--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, 'home') %>
-<div> class = "center hero-unit">
-  <div style="height: 100px"></div>
+<div class = "center hero-unit">
    	<div style="height: 90px">
 	<form name="cities" action="city_form_action.js" method="get">
 		<select name="city" style="width: 140px">
