--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,3 +1,5 @@
+<!-- Refactor this code so it can be used for all the other models -->
+ 
 <% if @user.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-error">
