--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
 	            <ul class="nav pull-right">
 	              <li><%= link_to "about", '/about' %></li>
 				  <% if signed_in? %>
-				  <li> <%= link_to "Users", users_path %></li>
+				  <li> <%= link_to "users", users_path %></li>
+				  <li> <%= link_to "inbox", mailbox_path(current_user, folder: "inbox") %> </li>
 				  <li id="fat-menu" class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 						Account <b class="caret"></b>
