--- a/app/views/mailbox/mailbox.html.erb
+++ b/app/views/mailbox/mailbox.html.erb
@@ -1,14 +1,7 @@
 <% provide(:title, 'mailbox') %>
 <h1><%= current_user.firstname + "'s mailbox"%></h1>
-<br>
 
-<% unless current_user.nil? %>
-
-	<%= link_to "inbox", mailbox_path(current_user, folder: "inbox" ) %>
-	<%= link_to "sent", mailbox_path(current_user, folder: "sent" )%>
-	
-<% end %>
-
+<%= render 'shared/mailbox_nav' %>
 
 <%= will_paginate @messages%>
 
