--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Messages#new</h1>
-<p>Find me in app/views/messages/new.html.erb</p>
+<div id="name">
+   Emailing: <%=@user.firstname%>
+   
+</div>
+<%= render 'new_message'%>
