--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 	          <nav>
 	            <ul class="nav pull-right">
 	              <li><%= link_to "about", '/about' %></li>
+				  <li><%= link_to "forum", forum_path %>
 				  <% if signed_in? %>
 				  <li> <%= link_to "users", users_path %></li>
 				  <li> <%= link_to "inbox", mailbox_path(current_user, folder: "inbox") %> </li>
