--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,8 @@
-
+<div id="name">
+   Name <%= @user.firstname%> <%link_to "edit", ""%>
+   email <%= @user.email%> <%link_to "edit", ""%>
+   
+</div>
 
 <%= render 'form_edit' %>
 
