--- a/app/views/forumposts/new.html.erb
+++ b/app/views/forumposts/new.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@post) do |f| %>
-   <%=render 'shared/country_city_select', :f => f%>
+   <%=render 'shared/country_city_select', :f=>f, :inline_search => false %>
   <div class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
