--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,49 +7,39 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<header class="navbar navbar-fixed-top">
-	      <div class="navbar-inner">
-	        <div class="container">
-	          <h2> <%= link_to "Lokolit", '/', id: "logo" %> </h2>
-	          <nav>
-	            <ul class="nav pull-right">
-	              <li><%= link_to "about", '/about' %></li>
-				  <li><%= link_to "forum", forum_path %>
-				  <% if signed_in? %>
-				  <li> <%= link_to "users", users_path %></li>
-				  <li> <%= link_to "inbox", mailbox_path(current_user, folder: "inbox") %> </li>
-				  <li id="fat-menu" class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-						Account <b class="caret"></b>
-					</a>
-					<ul class="dropdown-menu">
-						<li> <%= link_to "profile", current_user %></li>
-						<li> <%= link_to "settings", edit_user_path(current_user) %> </li>
-						<li class="divider"> </li>
-						<li> <%= link_to "Sign out", signout_path, method: "delete" %> </li>
-					
-					</ul>
-				  </li>
-				  <% else %>
-	              <li><%= link_to "sign in ", signin_path %></li>
-				  <% end %>
+   <header class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+         <div class="container">
+            <h2> <%= link_to "TiniHost", '/', id: "logo" %> </h2>
+            <nav>
+               <ul class="nav pull-right">
+                  <li><%= link_to "about", '/about' %></li>
+				      <li><%= link_to "forum", forum_path %>
+				      <li> <%= link_to "hosts", hosts_path %></li>
+                  <% if signed_in? %>
+                     <%= render 'shared/signedin_header' %>
+				      <% else %>
+	                  <li><%= link_to "sign in ", signin_path %></li>
+                  <% end %>
 	            </ul>
-	          </nav>
-	        </div>
-	      </div>	
-	    </header>
-        <div style="height: 100px;"></div>
+	         </nav>
+	       </div>
+	   </div>	
+	</header>
+   
+   <div style="height: 100px;"></div>
     
-		<div class="container">
-            <% flash.each do |key, value| %>
-            <% if "#{key}" == "error" %>
-                <%= content_tag(:div, value, style: "color: red") %>
-            <% else %>
-                <%= content_tag(:div, value, style: "color: green") %>
-            <% end %>
-            <% end %>
-			<%= yield %>
-			<%= debug(params) if Rails.env.development? %>
-		</dib>	
+	<div class="container">
+      <% flash.each do |key, value| %>
+         <% if "#{key}" == "error" %>
+            <%= content_tag(:div, value, style: "color: red") %>
+         <% else %>
+            <%= content_tag(:div, value, style: "color: green") %>
+         <% end %>
+      <% end %>
+
+      <%= yield %>	
+      <%= debug(params) if Rails.env.development? %>
+   </div>			
 </body>
 </html>
