--- a/app/views/pages/find.html.erb
+++ b/app/views/pages/find.html.erb
@@ -1,3 +1,8 @@
-<% provide(:title, 'find a local') %>
-<h1>Pages#find</h1>
-<p>Find me in app/views/pages/find.html.erb</p>
+<% provide(:title, 'find a host') %>
+<div id="name">
+   Where are you going?
+</div>
+<%= form_tag users_path, method: 'get' do %>
+  <%= render "shared/country_city_select", :inline_search => true%>
+<%= submit_tag "Go!", :name => nil %>
+<% end %>
