--- a/app/views/shared/friend_email.html.erb
+++ b/app/views/shared/friend_email.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag recommend_user_path(@user), :method=>'post' do %>
+<%= form_tag mailfriend_user_path(@user), :method=>'post' do %>
 <%= label_tag "friend's email:" %>
 <%= text_field_tag "email"%>
 <%= label_tag "add a note (optional)"%>
