--- a/app/views/hostprofiles/new.html.erb
+++ b/app/views/hostprofiles/new.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, 'become host') %>
-<div style="height:20px"> 
 
-</div>
-<h1>Become a host</h1>
+<h2>Enter your host information</h2>
+<br>
 <div>
 <%= render 'form_become_host' %>
 </div>
