--- a/app/views/hostprofiles/_form_become_host.html.erb
+++ b/app/views/hostprofiles/_form_become_host.html.erb
@@ -1,33 +1,39 @@
 <%= form_for(@hostprofile) do |f| %>
-  <div id="name">
+  <div class="field">
      <%= render 'shared/country_city_select', :f => f, :inline_search => false %>
   </div>
   <div class="field">
-     <%= f.label :what_languages_do_you_speak %>
-     <%= f.collection_select :languages, Language.order(:name), :name, :name, {placeholder: "asdfasdfasdfasfdasdf"}, {multiple: true}%>
+     <%= f.label :what_do_you_speak %>
+     <%= f.text_field :language_tokens %>
   </div>
   <div class="field">
     <%= f.label :select_service %>
     <%= f.collection_select :service, Service.all, :id, :title %>
   </div>
   <div class="field">
-    <%= f.label :telephone %><br />
+    <%= f.label :exchanging_service_for %>
+    <%= f.select :other_exchange, Hostprofile::EXCHANGE_METHODS, {}, :selected=>"money" %>
+  </div>
+  <div id="exchange_option" class="field"> 
+  </div>
+  <div class="field">
+    <%= f.label :telephone %>
     <%= f.text_field :tele %>
   </div>
   <div class="field">
-    <%= f.label :Service_Description %><br />
+    <%= f.label :Service_Description %>
     <%= f.text_field :serviceDesc %>
   </div>
   <div class="field">
-    <%= f.label :about_me %><br />
+    <%= f.label :about_me %>
     <%= f.text_field :aboutme %>
   </div>
   <div class="field">
-    <%= f.label :price %><br />
+    <%= f.label :price %>
     <%= f.text_field :price %>
   </div>
   <div class="field">
-    <%= f.label :green_description %><br />
+    <%= f.label :green_description %>
     <%= f.text_field :greenDesc %>
   </div>
   <div class="actions">
