--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,63 +1,18 @@
 <% provide(:title, @user.firstname) %>
 
 <p id="notice"><%= notice %></p>
-<div class="row">
-     <div class="span7">
-       <div class="thumbnail">
-          <% if @user.images.empty? %>
-            <%= image_tag "http://placehold.it/260x180", id: "displayimg" %> <!-- TODO: change default -->
-          <% else %>
-            <% firstimg = @user.images.first %>
-            <%= image_tag firstimg.photo.url(:large), id: "displayimg" %>
-            <div id="caption">           
-               <% if !firstimg.caption.empty? %>
-                  <p id="displaycaption"><%= firstimg.caption %></p>
-               <% end %>
-            </div>
-          <% end %>
-       </div>
-     </div> <!-- end of display image -->
-    
-     <%if @user.images.count > 1%>
-        <div class="span2">
-           <% n = 0 %>
-           <% @user.images.each do |img|%>
-              <div class="span2">
-                 <%= image_tag img.photo.url(:large), class: "thumbnail", id: "imgthumb#{n+=1}", size: "70x72", :caption=>img.caption%>
-              </div>
-           <% end %>
-        </div>
-     <% end %>
+
+<div class="row" >
+   <div class="span4" style="background-color: #eee; height: 385px">
+      <div style="margin:15px">
+         <%= render "personal_info" %>
+      </div>
    </div>
-   <aside class="span1">
-      <section>
-        <h1>  
-          <% @user.images.each do |img|%>
-             <%= link_to (image_tag img.photo.url(:medium)), img.photo.url(:original)%>
-             <% if current_user?(@user) %>   
-                <%=link_to "delete", img, confirm: "are you sure", method: :delete%>
-             <%end%>
-          <%end%>
-          <%= @user.firstname %>
-        </h1>
-      </section>
-   </aside>
-</div>
-<p>
-  <b>Firstname:</b>
-  <a id="editfirstname" href="#">edit</a>
-  <%= best_in_place @user, :firstname, :type=>:input, :activator=> "#editfirstname" %>
-</p>
+   <div class="span8"> 
+         <%= render "picture_gallery" %>  
+   </div>
+</div> 
 
-<p>
-  <b>Lastname:</b>
-  <%= @user.lastname %>
-</p>
-
-<p>
-  <b>Email:</b>
-  <%= @user.email %>
-</p>
 
 <% if host_user?(@user)%>
    <%= render @user.hostprofile %>
