--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,22 @@
 <% provide(:title, 'how it works')%>
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h3>How it works</h3>
+
+<div class="span10">
+   <div class="row">
+      
+   
+1. Decide where your next awesome trip will be. 
+ <picture of places>
+</div>
+
+<div class="row">
+2. Check out all the available hosts in that area to show you a fun time, whether it'd be hiking to the mountains or taking you to the most happening bar in town.
+</div>
+3. Request a meetup with the desired host by checking his/her availability
+
+4. Once the host responds available, you can book your meetup, and you're all set.  You can contact more than 1 host at a time to check for availability, just simply book the one you want.
+
+5. After your meetup, complete the appointment and submit a short review of your experience. Your stats will be updated accordingly and your host will be super grateful for your awesome feedback :).
+</div>
+
+</div>
