--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,8 +22,8 @@
             <small id="light"> What about other cities? </small>
          </div>
          <div class="row" id="location-button">
-            <%= link_to image_tag("learn.png", alt: "learn more", class: "navlink"), about_path, :id=>"response" %>   <strong>  </strong> <%= link_to image_tag("signup.png", alt: "learn more", class: "navlink"), signup_path %>           
-         </div>                     
+            <%= link_to image_tag("facebook.png", alt: "Tinihost facebook page", class: "navlink", size: "50x50"), "https://www.facebook.com/TiniHost" %>   <strong>  </strong> <%= link_to image_tag("twitter.png", alt: "Tinihost twitter page", class: "navlink", size: "50x50"), "https://twitter.com/tinihost" %>           
+         </div>                 
          </div>
       </div>
    </div>
