--- a/app/views/users/_picture_gallery.html.erb
+++ b/app/views/users/_picture_gallery.html.erb
@@ -3,13 +3,12 @@
       <div>
          <% if @user.images.empty? %>
             <%= image_tag "full_hat.png", id: "displayimg" %> 
-            <div class="edit_link" id="caption" style="text-align:center; position:relative; opacity:0.8; top:-32px; left:0px; background: #444">
+            <div class="edit_link" id="img-overlay">
                <%= link_to "Add image", edit_user_path(@user, anchor: "picture") unless !current_user?(@user) %>
             </div>
          <% else %>
             <% firstimg = Image.find_by_id(@user.profile_pic_id) || @user.images.first %>
-            <%= link_to image_tag(firstimg.photo.url(:large), id: "displayimg", :data=>{:id=>firstimg.id}), image_path(firstimg) %>            
-            
+            <%= link_to image_tag(firstimg.photo.url(:large), id: "displayimg", :data=>{:id=>firstimg.id}), image_path(firstimg) %>                 
          <% end %>
        </div>
    </div> <!-- end of display image -->
