--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,52 @@
 <% provide(:title, 'how it works')%>
-<h3>How it works</h3>
-
-<div class="span10">
+<div class="filler"></div>
+<div class="span11" style="margin-left:0px">
    <div class="row">
       
-   
+   <div class="span3">
+      <div class="filler">
+         
+      </div>
+      <ul class="nav nav-list sidebar">
+         <% if params[:view].nil? || params[:view] == "how"%>
+            <li class="active">
+         <% else %>
+            <li>   
+         <% end %>
+         <%= link_to "How it works", about_path(view: "how") %>
+         </li>
+         
+         <% if params[:view] == "host"%>
+            <li class="active">
+         <% else %>
+            <li>   
+         <% end %>
+         <%= link_to "Host information", about_path(view: "host") %>
+         </li>
+         
+         <% if params[:view] == "traveler"%>
+            <li class="active">
+         <% else %>
+            <li>   
+         <% end %>
+         <%= link_to "Traveler information", about_path(view: "traveler") %></li>
+         
+         <% if params[:view] == "faq"%>
+            <li class ="active">
+         <% else %>
+            <li>   
+         <% end %>
+         <%= link_to "FAQ", about_path(view: "faq") %></li>
+         
+      </ul>
+      
+   </div>
+   <div class="span8" style="margin-left:20px">
+      <div class="row">
+         <h3>How it works</h3>
+         
+      </div>
+   <div class="row">
 1. Decide where your next awesome trip will be. 
  <picture of places>
 </div>
@@ -12,11 +54,22 @@
 <div class="row">
 2. Check out all the available hosts in that area to show you a fun time, whether it'd be hiking to the mountains or taking you to the most happening bar in town.
 </div>
-3. Request a meetup with the desired host by checking his/her availability
 
+<div class="row">
+   3. Request a meetup with the desired host by checking his/her availability
+</div>
+
+<div class="row">
+   
 4. Once the host responds available, you can book your meetup, and you're all set.  You can contact more than 1 host at a time to check for availability, just simply book the one you want.
+</div>
 
+<div class="row">
+   
 5. After your meetup, complete the appointment and submit a short review of your experience. Your stats will be updated accordingly and your host will be super grateful for your awesome feedback :).
 </div>
-
 </div>
+</div>
+
+
+
