--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,8 +28,16 @@
       </div>
    </div>
 </div>
+<br/>
+<div class="container">
+   <div class="center">
+      <div class="row" style="margin-left: 0px; padding: 40px 0px 50px 50px; background: #596E6E; border-radius: 6px">
+         <div class="span9 aboutpage_dark">
+      <%= render "shared/how_it_works" %>
+      </end>
+   </div>
+</div>
 <div id="footer" class="container">
    <div class="center hero-unit">
-      asdfasdfafd
    </div>
 </div>
