--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,6 +25,60 @@ $navbarLinkColor:#ccc;
   box-sizing: border-box;
 }
 
+.aboutpage{
+	margin-left:20px;
+	h1{
+			border:1px solid #ddd;
+			border-radius: 4px;
+			color:#2EB8E6;
+			padding-left:20px;
+			background-color:#eee;
+	}
+	h4{
+		font-size:1.3em;
+		font-weight: normal;
+		color: #666;
+	}
+	image#right{
+		text-align:right;
+	}
+	strong{
+		color: #2EB8E6;
+	}
+	li{
+		color: #777;
+		font-size:1.3em;
+	}
+}
+.aboutpage_dark{
+	margin-left:90px;
+	
+	h2{
+		color:#fff;
+	}
+	strong{
+		color:#D6F5FF;
+	}
+	h1{
+		border:1px solid #999;
+		border-radius: 4px;
+		color:#00CC99;
+		padding-left:20px;
+		background: #ddd;
+	}
+	h4{
+		font-size:1.3em;
+		font-weight: normal;
+		color: #ccc;
+	}
+	
+	h3{
+		color:#CCFFFF;
+	}
+	image#right{
+		text-align:right;
+	}
+}
 .sidebar{
 	border-radius:3px; 
 	border:1px solid #eee; 
@@ -118,7 +172,7 @@ body {
 		position:relative; 
 		background-color:#333; 
 		height:20px; 
-		top:-29px; 
+		top:-27px; 
 		opacity:0.8; 
 		z-index:5;
 		
@@ -696,27 +750,13 @@ ul.ui-autocomplete {
 	height:40px;
 }
 
-.menu-labeld {
-	position:relative;
-	z-index:999;
-	margin-left: 5px;
-	font-family:helvetica, verdana;
-   font-size:15px;
-	left: 5px;
-	top: -9px;
-	width: 70px;
-	height:50px;
-	text-align:left;
-	font-size: 1.1em;
-	color: white;
-}
 .menu-label {
 	position:relative;
 	z-index:999;
 	margin-left: 5px;
 	font-family:helvetica, verdana;
 	left: 12px;
-	top: -35px;
+	top: -30px;
 	width: 75px;
 	height:50px;
 	text-align:center;
